Prevented last post cell content from wrapping
darcs-hash:20071114165630-1d602-7d8c22821060e4cc1aac37b617db178c58867c0f.gz

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -7,6 +7,7 @@ table  { border-collapse: collapse; width: 100%; }
 td, th { padding: 4px 6px; border: 1px solid #999; text-align: left; }
 th { font-weight: bold; }
 td p.description { margin: 4px 0 0 0; }
+td.last-post { white-space: nowrap; }
 th.forum-topics { text-align: center; }
 a.unread { margin-right: 4px; }
 a.unread img { vertical-align: middle; }
